refactor: HttpRequestHandlerRouter를 통해 interface로 동작할 수 있도록 수정 - package 구조를 수정하여 들어오는 url에 따라 핸들러가 동작할 수 있도록 수정

--- a/src/main/resources/static/global.css
+++ b/src/main/resources/static/global.css
@@ -39,6 +39,15 @@
   text-align: center;
 }
 
+.fail-title {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 38.19px;
+  padding: 10px 0;
+  color: red;
+  text-align: center;
+}
+
 .btn {
   border: none;
   border-radius: 8px;
