feat: /user/list 접속 리다이렉트, 동적 페이지 구현 - 로그인되지 않은 상태로 접속할 경우 / 로 리다이렉트 되도록 구현 - 로그인 된 상태로 /user/list에 접속할 경우, 모든 유저들을 볼 수 있게 구현

--- a/src/main/resources/static/global.css
+++ b/src/main/resources/static/global.css
@@ -48,6 +48,14 @@
   text-align: center;
 }
 
+.ul-user{
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38.19px;
+  padding: 64px;
+  text-align: center;
+}
+
 .btn {
   border: none;
   border-radius: 8px;
