refactor: HttpRequest를 Byte 단위로 읽도록 수정, 페이지 버튼 수정 - HttpRequestReader에서 BufferedReader가 아닌 BufferedInputStream를 통해   읽도록 수정 - 동적 메인 페이지에서 유저 리스트 버튼 추가 - 유저리스트 페이지에서 로그아웃 시, post 요청으로 보내도록 수정

--- a/src/main/resources/static/global.css
+++ b/src/main/resources/static/global.css
@@ -95,6 +95,14 @@
   color: #ffffff;
 }
 
+.btn_userlist{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 14px;
+  background: green;
+  color: #ffffff;
+}
+
 .btn_size_s {
   padding: 8px 16px;
   font-size: 14px;
